--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </head>
   <body class="bg-vibes-white text-vibes-black antialiased selection:bg-vibes-gold selection:text-white">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
